--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/solarized.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +24,29 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section> <!-- Title Slide --!>
+          <h1>Safe Haskell</h1>
+          <h2>Reinforcing Security Through Language</h2>
+          <p>Erik Feller</p>
+        </section>
+        <section> <!-- Slide detailing basic Haskell advantages --!>
+          <section data-markdown>
+            ## Why is Haskell the Best?
+            * Strong Type System
+            * No Side Effects
+            * We All Love It
+          </section>
+        </section>
+        <section> <!-- Slide explaining the security benefits of Haskell --!>
+          <section>
+            <h2>Haskell and Security</h2>
+            <p> These traits that make Haskell fun to program in also allow us to make some security assumptions about our code </p>
+          </section>
+          <section id="fragments">
+            <p> Restricting IO can make our code inherently safe in ways that other languages can't guarantee </p>
+            <p class="fragment"> by constraining where and when IO happens we can have safer code than allowed by languages like Java </p>
+          </section>
+        </section>
 			</div>
 		</div>
 
